metacatui/src/main/webapp/js/themes/default/css/metacatui.css
/* Import font families */
@import url(http://fonts.googleapis.com/css?family=Oswald:400,300,700);
/* Oswald weights:
Light 300
Normal 400
Bold 700
*/
@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,400italic);
/* Source Sans Pro weights:
Light 300
Normal 400
Normal italic 400
Semi-bold 600
Bold 700
*/

/* Body CSS
-------------------------------------------------- */
    body {
      color: #333333;
      font: 400 15px/15px "Source Sans Pro", "Helvetica Nueue", "Helvetica", "sans serif";
    }

    
    article, aside, figure, footer, header, hgroup, menu, nav, section { 
      display:block;   
    }

        
    body > #Content {
    	position: relative;
    	margin: 40px auto auto auto;
    	width: 1170px;
    	min-height: 800px;
    }
		
    body > section > article {
      background-color: #FFFFFF; /* Fallback for IE8 and earlier, will be solid white */
      background-color: rgba(255, 255, 255, 0.8);
      padding: 20px;
      border-radius: 20px;			
    }
    
     .container{
    	width: 100%;
    }
    
    h1 > a[name], h2 > a[name], h3 > a[name],
    h4 > a[name], h5 > a[name], h6 > a[name] {
      color: #555555;
      text-decoration: none;
      z-index: 20; /*keeps hidden anchor tags from blocking content*/
    }
    
    /* make sure the anchors render with padding-top */
    h1 > a[name]:before, h2 > a[name]:before, h3 > a[name]:before,
    h4 > a[name]:before, h5 > a[name]:before, h6 > a[name]:before {
		content: "";
    padding-top: 115px;
    }
    
    a {
      color: #166194;
    }
    
    a:hover{
    	color: #3399CC;
    	text-decoration: none;
    }
    
    ul, ol{
    	margin: 0px;
    }
    
    
    div.row-fluid > a[name] {
      margin: 35px auto auto auto;
    }
    
    h2#pagehead{
    	font: 400 31px/31px "Oswald" Arial sans-serif;
    }
     
    /* For full-screen background image */
	img.bg{
		min-height: 100%;
		min-width: 1024px;
		width: 100%;
		height: auto;
		position: fixed;
		top: 0;
		left: 0;
		z-index: -1; /* So that right-clicking on background image will behave like right-clicking on background */
		
	}
	
	@media screen and (max-width: 1024px) {
	  img.bg {
	    left: 50%;
	    margin-left: -512px;   /* 50% */
	  }
	}
    
/* FORM/INPUT CUSTOMIZATIONS
-------------------------------------------------- */ 
	.controls-well {
	    padding: 4px;
	    background: rgba(255, 255, 255, 0.3);
	}
	.control-label {
		cursor: default;
	}
	
	select{
    	font: 300 16px/16px "Oswald" Arial sans-serif;
    }
	
	
	#results-header select{
		border: 0;
		border-radius: 0;
		-webkit-appearance: none;
		background: none;
		width: 120px;
	}
	
	#results-header .select > i{
		margin-right: -110px;
	}
	

/* NOTIFICATION AREA CSS
 * -------------------------------------------------- */    
  section#Notification {
    position: fixed;
    top: 95px;
    height: 40px;
    width: 100%;
    max-height: 40px;
    min-height: 40px;
    background-color: #FDFDFD;
  }

  
/* FOOTER CSS
-------------------------------------------------- */    

    footer#Footer {
      position: relative;
      bottom: 0px;
      margin-top: 40px;
      background: rgba(0, 0, 0, 0.8);
      padding: 20px 0px;
    }
    
    footer#Footer > .logos{
    	width: 350px;
    	margin-top: 20px;
    }
    
    footer#Footer > .logos > div{
    	height: 100px; 	
    }
    
    footer#Footer > .logos > div > a{
    	line-height: 100px; 	
    }
	
	footer#Footer > div:last-child{
		text-align: center;
		color: #999999;
	}

    footer#Footer h2 {
      font: 300 25px/25px "Oswald", Arial, sans-serif;
      color: #FDFDFD;
      padding: 0;
      line-height: 48px;
    }
    
    footer#Footer ul.helpitems {
      list-style: none;
    }
    
    footer#Footer ul.helpitems li {
      font: 400 15px/15px "Source Sans Pro", Arial, sans-serif;
      vertical-align: baseline;
      margin: 15px 0px 0px 0px;                 
    }
    
    ul.helpitems a {
      color: #FDFDFD;     
    }
    
    ul.helpitems a:hover{
    	color: #3399CC;
    	text-decoration: none; 
    }
    

    footer#Footer img {
      opacity: .75;
    }
    
 /* BUTTONS CSS
-------------------------------------------------- */   
    
    .btn, .btn-primary, .btn-large, .btn-small, .btn-mini {
      background-image: none;
      background-repeat: none;
      background-color: #166194;
      box-shadow: none;
      -moz-box-shadow: none;
      border: none;
      filter: none;
      font: 400 20px/20px "Oswald" Arial, sans-serif;
      text-shadow: none;
      color: #FFFFFF;
    }

    .btn-primary a, .btn-info a, .btn-success a, .btn-warning a, .btn-danger a, .btn-inverse a {
      color: #FFFFFF; 
      text-decoration:none;     
    }
    
    .btn-primary {
      background-color: #166194;
      color: #FFFFFF;
      
    }
    
    .btn-primary[disabled], .btn-primary[disabled]:hover, .btn[disabled], .btn[disabled]:hover {
		background-color: #999999;
		color: #FFFFFF;
		text-shadow: none;
		border: none;
    }
        
    .btn:hover, .btn-primary:hover, .btn-large:hover, .btn-small:hover, .btn-mini:hover{
      color: #166194;
      background: rgba(22, 97, 148, 0.2);
    }
    
    #search_btn.btn {
      background-color: #992222;
      color: #FFFFFF;
      
    }
    
    #search_btn.btn:hover {
      background-color: #882222;
      color: #FFFFFF;
      
    }
     /* Download  and Publish buttons */
     #downloadPackage > a.btn{
    	width: 100px;
    } 
    
    #downloadPackage > a.btn:first-child{
    	margin-bottom: 8px;
    }    
/* ICONS CSS
-------------------------------------------------- */
    
    i.glyphicons-icon, i.halflings-icon {
      opacity: .8;
    }

    i.glyphicons-icon.white {
      opacity: 1;
    }
   
    
/* CUSTOMIZE THE NAVBAR
-------------------------------------------------- */
    
    .center {
      float: none;
      margin: 0 auto;
    }
    
    nav#Navbar {
      top: 0px;
      width: 100%;
      float: none;      
    }
    
    /* Depending on the headerType, these classes apply */

    .navbar {
      position: relative;
      border: none;  
      margin: 0px;  
    }
    
    .navbar .nav{
    	float: right;
    	margin: 0px;
    }

    .navbar-inner {
      border: none;
      background: none;
      min-height: 0px;
      box-shadow: none;
    } 
    
    .navbar-inner > ul{
    	margin: 0px;
    }

	.navbar-inner > ul > li img{
		height: 45px;
	}
    .navbar .nav > li > a {
      color: #FFFFFF;
      font: normal normal 400 35px/35px "Oswald", Arial, sans-serif;
      text-transform: uppercase;
    }

    .navbar .nav > li > a:focus,
    .navbar .nav > li > a:hover {
      color: #FFFFFF;
      text-decoration: none;
      opacity: 0.7;
    }
    
    .navbar .nav > .active > a,
    .navbar .nav > .active > a:hover,
    .navbar .nav > .active > a:focus {
      color: #555555;
      font-weight: 400;
      text-decoration: none;
      background-color: #E5E5E5;
      -webkit-border-radius: 5px;
      -moz-border-radius: 5px;
      border-radius: 5px;
      -webkit-box-shadow: none; /*inset 0 3px 8px rgba(0, 0, 0, 0.125);*/
         -moz-box-shadow: none; /*inset 0 3px 8px rgba(0, 0, 0, 0.125);*/
              box-shadow: none; /*inset 0 3px 8px rgba(0, 0, 0, 0.125);*/
    }

    /* Offset the responsive button for proper vertical alignment */
    .navbar .btn-navbar {
      margin-top: 10px;
    }

    /* Offset the search div for proper vertical alignment */
    .navbar .input-append {
      margin: 5px 0px 0px 0px;
      z-index: 290;
    }

    #Navbar form {
      margin: 0px 0px 0px 0px;
      padding: 0px 0px 0px 0px;
    }
    #Navbar i .user {
      opacity: .6;
    }
    
    #SignIn {
      float: right;
    }

    

/* METADATA VIEW CSS
-------------------------------------------------- */
	label.control-label{
		font: 400 15px/15px "Oswald";
	}
	
	#Metadata .well{
		font: 300 21px/22px Oswald;
		border: 1px solid #CCCCCC;
		box-shadow: none;
		-moz-box-shadow: none;
		
	}
	
	#Metadata .well strong{
		font-weight: 400;
	}
	
	#Metadata h4{
		font: 300 16px/16px "Oswald" Arial sans-serif;
		color: #555555;
	}
	
	#Metadata .nav-header{
		text-transform: none;
	}
	
	#Metadata .nav-list > .active > a{
		font-weight: 700;
		background-color: #166194;
		text-shadow: none;
	}
	
	#Metadata .nav > li > a:hover{
		text-shadow: none;
	}
    
/* Registry CSS
-------------------------------------------------- */
    #RegistryEntryForm, 
    #RegistryLogin, 
    #RegistryResponse, 
    #RegistryEntryReview, 
    #RegistryGuide {
		/*margin-top: 110px;*/
		min-height: 800px;
    }
    
    /* Larger modal for guide content */
    .modal.large {
    	width: 80%;
    	margin-left: -40%;
    }
    
    

  /* SIDEBAR CSS
  -------------------------------------------------- */
    #sidebar {
      min-height: 400px;
    } 
        
    #sidebar_share {
      margin: 20px 10px 10px 15px;
      padding: 8px;
    }
    
    
    #refine .nav-list {
      margin: 20px auto auto auto;
    }
    
    ul#refine .nav-list .input-append {
      max-width: 200px;
    }
    
    .sidebar-subhead {
      color: #666666;
      font-weight: bold;
      text-transform:uppercase;
      padding: 20px 0 10px 0;
    }
    
    .sidebar-item {
      color: #666666;
      font-weight: bold;
      padding: 5px;
      border-radius: 5px;
      -webkit-border-radius: 5px;
      -moz-border-radius: 5px;
      line-height: 25px;
    }

    .nav-list .popular-search-link{
      font: 400 16px/16px "Source Sans Pro";
      color: #555555;
      margin-right: 10px;
      text-shadow: none;
    }
    
    .nav-list .popular-search-link:hover{
      color: #166194;
      background: none;
    }
    
    .popular-search-link > .halflings-icon{
    	margin-right: 5px;
    }
    
    .nav-list .sidebar-item-selected {
      background-color: #166194;
      padding-top: 3px;
      padding-bottom: 3px;
      color: #FFFFFF;
    }
    
    h2.nav-header {
      font: 400 18px/18px "Oswald" Arial sans-serif;
      margin: 20px 10px 10px 15px;
      padding: 3px 0px 3px 0px;
      color: #555555;    
      text-transform: none;  
    }
    
    li.nav-header{
    	text-transform: none;
		font: 600 13px/13px "Source Sans Pro";
		color: #7F7F7F;
    }
    

/* RESULT CSS
-------------------------------------------------- */
    .result-header {
      font-weight: bold;
      border-bottom: thin solid;
    }
    
    .result-header-count {
      font: 300 18px/18px "Oswald" Arial sans-serif;
    }
    
    .result-row {
      display: inline-block;
        border-bottom: thin solid;
        padding: 5px;
    }
    
    .result-row:hover { 
    background-color: #FDFDFD;
  }

    .result-author {
      font-weight: bold;
    }
    
    .pagination {
    	cursor: pointer;
    	margin: auto;
    }

	.pagination ul{
		border: none;
		margin-top: 10px;
	}
	
	.pagination ul > li > a{
		font: 400 16px/16px "Oswald" sans-serif;
		border: none;
	}
	
/* MAIN CONTENT 
--------------------------------- */
#mainContent{
	height: 600px;
}

#mainContent h1{
	font: 400 60px/60px "Oswald" Arial sans-serif;
	color: #FFFFFF;
	text-transform: uppercase;
	width: 300px;
}

#mainContent input{
	height: 90px;
	border-radius: 20px;
	font: 300 30px/30px Oswald;
	border: none; 
	padding-left: 20px;
	float: left;
}

#mainContent input::-webkit-input-placeholder{
	padding-top: 7px;
}
#mainContent input:-moz-placeholder{ /* Firefox 18- */
	padding-top: 7px;
}
#mainContent input::-moz-placeholder{ /* Firefox 19+ */
	padding-top: 7px;
}
#mainContent input:-ms-input-placeholder{
	padding-top: 7px;
}

#search_btn_main{
	float:left;
	height:59px;
	margin-left: -20px;
	border-radius: 0 15px 15px 0;
	background-color: #FFFFFF;
	padding-top: 35px;
	color: #999999;
}

